# AuresNet-DZ

./: .env.example  .gitignore  LICENSE  Makefile  README.md  analysis_report.html  environment.yml  pyproject.toml  results.md  show_results.py
analysis_results/: metrics.json
configs/: config.yaml
configs/data/: cloud.yaml  colab.yaml  default.yaml
configs/model/: unet.yaml
configs/train/: cloud.yaml  colab.yaml  default.yaml  local_gpu.yaml
scripts/: README.md  download_era5_cclm_match.py  export_to_onnx.py  generate_analysis.py  prepare_aures_data.py  run_cloud_full.sh  run_colab_full.sh  run_local_gpu.sh
src/auresnet_dz/: analysis_utils.py
src/auresnet_dz/data/: datamodule.py  io.py  pairs.py  regrid.py  verification.py
src/auresnet_dz/models/: unet_smp.py
src/auresnet_dz/train/: lightning_module.py  train.py
tests/: test_imports.py
